# modern_CV_-1

./: .gitignore  =0.26.0  README.md  pyproject.toml  train.py
logs/: events.out.tfevents.1761492218.daniil-HP.103985.0  events.out.tfevents.1761493069.daniil-HP.114977.0  events.out.tfevents.1761493899.daniil-HP.114977.1
models/vit-cifar10/runs/Oct26_10-17-30_daniil-HP/: events.out.tfevents.1761463051.daniil-HP.29496.0
models/vit-cifar10/runs/Oct26_10-57-25_daniil-HP/: events.out.tfevents.1761465445.daniil-HP.47472.0
models/vit-cifar10/runs/Oct26_11-25-18_daniil-HP/: events.out.tfevents.1761467119.daniil-HP.66138.0
models/vit-cifar10/runs/Oct26_11-43-17_daniil-HP/: events.out.tfevents.1761468197.daniil-HP.77489.0
models/vit-cifar10/runs/Oct26_12-09-17_daniil-HP/: events.out.tfevents.1761469758.daniil-HP.94943.0
models/vit-cifar10/runs/Oct26_12-11-01_daniil-HP/: events.out.tfevents.1761469862.daniil-HP.96088.0
models/vit-cifar10/runs/Oct26_12-14-24_daniil-HP/: events.out.tfevents.1761470066.daniil-HP.97773.0
models/vit-cifar10/runs/Oct26_12-26-18_daniil-HP/: events.out.tfevents.1761470778.daniil-HP.8754.0
models/vit-cifar10/runs/Oct26_12-33-42_daniil-HP/: events.out.tfevents.1761471222.daniil-HP.12678.0
models/vit-fashion-mnist-fast/: config.json  trainer_state.json
models/vit-fashion-mnist-fast/checkpoint-85/: optimizer.pt  scaler.pt  scheduler.pt  trainer_state.json
notebooks/: data_exploration copy.ipynb  data_exploration.ipynb
reports/: training_metrics.json
src/: data_preparation.py  model_training.py
(+1 files in other folders)
